fix right margin to prevent overlap of picture and text on high-res screens

--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -219,6 +219,7 @@ body {
       0;
     padding-right: 6rem;
     padding-left: 4rem;
+    margin-right: 2rem;
 
     @if $layout-reverse {
       margin-right: $sidebar-width;
